# adaptive-amcl-corridor-navigation

./: .gitignore  README.md
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: nav_param.yaml
src/robot_description/launch/: display.launch.py  nav.launch.py
src/robot_description/map/: new_map.yaml  new_map_clean.pgm
src/robot_description/scripts/: corridor_patrol.py  env_classifier.py
src/robot_description/urdf/: base.xacro  common_properties.urdf.xacro  robot_model.xacro
src/robot_description/world/: symmetric_corridor.sdf
